# pantry

./: .gitignore  CLAUDE.md  README.md
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3c5c3b5cd329_create_pantry_item.py  941eea38b4ee_create_ingredient.py
backend/app/: db.py
backend/app/models/: __init__.py  ingredient.py  pantry_item.py
backend/app/routers/: ingredients.py  pantry_items.py
docs/: pantry_app_design.md  pantry_app_implementation_plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  ingredients.ts  pantryItems.ts
frontend/src/components/: Header.tsx  Modal.tsx  NavBar.tsx
frontend/src/pages/: Pantry.tsx
frontend/src/types/: api.ts  index.ts
frontend/src/utils/: modelAdapter.ts  unitConverter.ts
